<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UICalculator</string>
    <string name="action_settings">Settings</string>
    <string name="calculation">Type to start &#8230;</string>
    
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">x</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtract">-</string>
    <string name="clear">C</string>
	<string name="backspace">&#60;</string>
    <string name="negative_toggle">-/+</string>
    <string name="add">+</string>
    

</resources>
