<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button2"
                android:layout_width="64sp"
                android:layout_height="64sp"  
                android:text="@string/backspace"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/negative_toggle" />

            <Button
                android:id="@+id/button4"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button5"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button6"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button7"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button8"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button9"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/four" />

            <Button
                android:id="@+id/button10"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/five" />

            <Button
                android:id="@+id/button11"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/six" />

            <Button
                android:id="@+id/button12"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button13"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/one" />

            <Button
                android:id="@+id/button14"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/two" />

            <Button
                android:id="@+id/button15"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/three" />

            <Button
                android:id="@+id/button16"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:text="@string/divide" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_below="@+id/tableLayout1" >

        <Button
            android:id="@+id/button17"
            android:layout_width="128sp"
            android:layout_height="64sp"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button18"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/button19"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:text="@string/equals" />
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
	        android:id="@+id/DEBUG"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="15sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculation"
            android:textSize="30sp" />

    </LinearLayout>

</RelativeLayout>